icon + css fix for icon overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -85,3 +85,19 @@
         margin-right: 0.5rem;
     }
 }
+
+@media (max-width:576px){
+    .nav-logo{
+        font-size: 1rem;
+        max-width: 12%;
+    }
+}
+
+.social-icon{
+    position: absolute;
+    right: 1%;
+    color: white;
+    z-index: 9999;
+    top: 3%;
+    font-size: 12px;
+}
